--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <header>
-    <h1>Hi, I'm Praneeth Koduru</h1>
-    <p>Product Manager | Scrum Master | Business Analyst</p>
-  </header>
-
+<header>
+  <img src="images/profile.jpg" alt="Praneeth Koduru" class="profile-photo" />
+  <h1>Hi, I'm Praneeth Koduru</h1>
+  <p>Product Manager | Scrum Master | Business Analyst</p>
+</header>
+    
   <section id="about">
     <h2>About Me</h2>
     <p>I’m passionate about building user-focused products and improving team efficiency through Agile practices.</p>
