Improve About Me section with stronger PM summary

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m passionate about building user-focused products and improving team efficiency through Agile practices.</p>
+    <p>I'm a results-driven Product Manager and Scrum Master with a passion for building user-centered digital solutions and optimizing cross-functional team delivery. I thrive at the intersection of business, technology, and design—translating vision into actionable features, driving Agile practices, and aligning stakeholders to deliver high-impact outcomes.</p>
   </section>
 
   <section id="skills">
