--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Praneeth Koduru | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- 🌌 tsParticles Library -->
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
 </head>
 <body>
+  <!-- 🌌 Particle Background Container -->
+  <div id="tsparticles"></div>
+
   <!-- 🌙 Dark Mode Toggle -->
   <button id="toggle-dark-mode" aria-label="Toggle Dark Mode">🌙</button>
 
@@ -27,8 +32,8 @@
     <h1>Hi, I'm Praneeth Koduru</h1>
     <p>Product Manager | Scrum Master | Business Analyst</p>
     <p>
-  I thrive at the crossroads of business strategy and team execution. With 6+ years across healthcare and transportation, I’ve led Agile teams, driven digital transformations, and delivered features that improved team efficiency and user satisfaction. Now, I’m focused on building intuitive, scalable products that solve real problems and create real impact. Let’s build something meaningful together.
-</p>
+      I thrive at the crossroads of business strategy and team execution. With 6+ years across healthcare and transportation, I’ve led Agile teams, driven digital transformations, and delivered features that improved team efficiency and user satisfaction. Now, I’m focused on building intuitive, scalable products that solve real problems and create real impact. Let’s build something meaningful together.
+    </p>
   </header>
 
   <section id="about">
@@ -88,6 +93,38 @@
     const backToTop = document.getElementById("back-to-top");
     window.addEventListener("scroll", () => {
       backToTop.style.display = window.scrollY > 300 ? "block" : "none";
+    });
+
+    // 🌌 tsParticles config
+    tsParticles.load("tsparticles", {
+      background: {
+        color: { value: "transparent" }
+      },
+      fpsLimit: 60,
+      interactivity: {
+        events: {
+          resize: true
+        }
+      },
+      particles: {
+        color: { value: "#ffffff" },
+        move: {
+          direction: "none",
+          enable: true,
+          outModes: { default: "bounce" },
+          random: true,
+          speed: 0.5,
+          straight: false
+        },
+        number: {
+          density: { enable: true, area: 800 },
+          value: 80
+        },
+        opacity: { value: 0.5 },
+        shape: { type: "circle" },
+        size: { value: { min: 1, max: 3 } }
+      },
+      detectRetina: true
     });
   </script>
 </body>
