Update About Me section with personalized content and center-align text for header and sections

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      I'm a results-driven Product Manager and Scrum Master with a passion for building user-centered digital solutions and optimizing cross-functional team delivery. I thrive at the intersection of business, technology, and design—translating vision into actionable features, driving Agile practices, and aligning stakeholders to deliver high-impact outcomes.
+      I come from humble beginnings in India, where my father instilled in me the belief that education is the key that sets us apart. When I was young, I didn’t fully grasp this wisdom, but over time, my passion for learning and self-improvement grew stronger. During my undergraduate studies, I set my sights on pursuing a master’s degree abroad—not just for academic growth, but to gain invaluable exposure to new cultures and perspectives.
+    </p>
+    <p>
+      Learning is a lifelong journey that continues to fuel my curiosity and drive. Education runs deep in my family: my parents and younger sister all hold graduate degrees, and their dedication inspires me daily. My goal is to keep evolving through knowledge and experiences, and to give back by empowering others along the way.
+    </p>
+    <p>
+      Professionally, I thrive at the intersection of business strategy, technology, and user experience. With a background in product management, scrum mastery, and business analysis, I’m passionate about building user-centered digital solutions that solve real problems. I excel in collaborating with cross-functional teams to deliver impactful products that align with strategic goals and enrich user experiences.
     </p>
   </section>
 
