feat: Update About section with personal story and ensure centered, transparent layout over particle background

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </p>
   </header>
 
+  <!-- 👤 About Me -->
   <section id="about">
     <h2>About Me</h2>
     <p>
@@ -49,6 +50,7 @@
     </p>
   </section>
 
+  <!-- 💼 Skills -->
   <section id="skills">
     <h2>Skills</h2>
     <ul>
@@ -60,17 +62,20 @@
     </ul>
   </section>
 
+  <!-- 📂 Projects -->
   <section id="projects">
     <h2>Projects</h2>
     <p>Coming soon!</p>
   </section>
 
+  <!-- 📫 Contact -->
   <section id="contact">
     <h2>Contact Me</h2>
     <p>Email: kodurup3066@gmail.com</p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/praneethkoduru/">View Profile</a></p>
   </section>
 
+  <!-- 📜 Footer -->
   <footer>
     <p>© 2025 Praneeth Koduru</p>
   </footer>
@@ -78,7 +83,7 @@
   <!-- 🔝 Back to Top Button -->
   <a href="#home" id="back-to-top" title="Back to top">↑</a>
 
-  <!-- 📜 Scripts -->
+  <!-- 🧠 Scripts -->
   <script>
     // 🌙 Dark mode toggle
     const toggleBtn = document.getElementById('toggle-dark-mode');
@@ -108,9 +113,7 @@
       },
       fpsLimit: 60,
       interactivity: {
-        events: {
-          resize: true
-        }
+        events: { resize: true }
       },
       particles: {
         color: { value: "#ffffff" },
