feat: Added full professional experience section with responsive layout and styled cards; refined dark theme and structure for consistency

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="dark-mode">
   <div id="tsparticles"></div>
 
-  <!-- 🧭 Top Navigation (Transparent) -->
+  <!-- 🌐 Top Navigation -->
   <nav class="top-nav transparent-nav">
     <ul>
       <li><a href="#home">Home</a></li>
@@ -45,11 +45,82 @@
 
   <section id="experience">
     <h2>Experience</h2>
-    <p><strong>Product Manager – Wabtec Corporation</strong><br>
-    Led 3 Agile teams across 8+ features (150+ user stories); improved efficiency and reduced delivery cycle by 25%.</p>
+    <div class="experience-grid">
 
-    <p><strong>Business Analyst – Optum</strong><br>
-    Managed requirements for IAM solutions and RBAC across enterprise; collaborated with cross-functional teams in Agile sprints.</p>
+      <div class="experience-card">
+        <h3>Trigint Solutions <span>Feb 2025 – Present</span></h3>
+        <h4>Product Owner</h4>
+        <ul>
+          <li>Owned the product strategy and backlog for the SafeSpect portal, driving inspection efficiency for 10K+ truck violations.</li>
+          <li>Delivered 200+ user stories and 60+ spikes, optimizing inspection workflows and compliance enforcement.</li>
+          <li>Refined inspector workflows and violation tracking via React-powered UI/UX enhancements.</li>
+          <li>Performed in-depth SQL data analysis to guide compliance and operational transparency.</li>
+          <li>Implemented RFID-based inventory tracking and led Agile ceremonies to accelerate product evolution.</li>
+        </ul>
+      </div>
+
+      <div class="experience-card">
+        <h3>Leading Response <span>Nov 2024 – Feb 2025</span></h3>
+        <h4>Business Analyst</h4>
+        <ul>
+          <li>Migrated 147 landing pages to HTML5/SCSS, improving performance and consistency by 30%.</li>
+          <li>Managed 2 Agile teams and ensured CMS and Medicare compliance for 75+ client profiles.</li>
+          <li>Utilized Tableau for analytics, improving plan optimization and claims processing decisions.</li>
+          <li>Drove enrollment and retention strategies through improved benefit design and automation.</li>
+        </ul>
+      </div>
+
+      <div class="experience-card">
+        <h3>Wabtec Corporation <span>Jan 2024 – Oct 2024</span></h3>
+        <h4>Technical Product Manager</h4>
+        <ul>
+          <li>Led eService portal migration to Angular across 11 Agile teams to improve performance and scalability.</li>
+          <li>Managed 21 features and 350+ user stories, ensuring roadmap alignment and sprint completion.</li>
+          <li>Enhanced UX/UI and enforced robust security (RBAC, encryption, masking).</li>
+          <li>Managed delivery milestones and resource allocation across multiple workstreams.</li>
+        </ul>
+      </div>
+
+      <div class="experience-card">
+        <h3>BODATY LLC <span>Oct 2023 – Dec 2023</span></h3>
+        <h4>Business Analyst</h4>
+        <ul>
+          <li>Built chatbot app using Suno AI and AWS Lambda; led Agile sprint planning and epics creation.</li>
+          <li>Created Python pipelines with AWS Glue for 40% faster processing.</li>
+          <li>Enhanced Tableau-based KPI reporting for real-time analytics and strategic insights.</li>
+        </ul>
+      </div>
+
+      <div class="experience-card">
+        <h3>University of North Texas <span>Aug 2022 – May 2023</span></h3>
+        <h4>Teaching Assistant</h4>
+        <ul>
+          <li>Mentored 120 students in C++ and Python for software and ML projects.</li>
+          <li>Created GitHub and Python tutorials to improve collaboration across 40 groups.</li>
+        </ul>
+      </div>
+
+      <div class="experience-card">
+        <h3>TATA Consultancy Services <span>Aug 2017 – Aug 2021</span></h3>
+        <h4>Data Analyst / Scrum Master / Business Analyst</h4>
+        <ul>
+          <li>Defined network optimization strategy for 25 European clients; led product backlog planning.</li>
+          <li>Boosted project execution by 25% through improved communication and agile alignment.</li>
+          <li>Managed Hadoop-to-AWS migration and delivered real-time visualizations using JavaScript.</li>
+        </ul>
+      </div>
+
+      <div class="experience-card">
+        <h3>Synergies Castings Ltd. <span>Nov 2016 – Mar 2017</span></h3>
+        <h4>Business Analyst</h4>
+        <ul>
+          <li>Optimized SQL data warehouse with Python-based ETL on AWS; cut query time by 30%.</li>
+          <li>Automated manual processes by 40% via SQL Server scripting.</li>
+          <li>Collaborated with VP of Product on roadmap planning and QA testing.</li>
+        </ul>
+      </div>
+
+    </div>
   </section>
 
   <section id="education">
