Added styled Education section to portfolio with Bachelor's and Master's degrees.

--- a/index.html
+++ b/index.html
@@ -125,8 +125,14 @@
 
   <section id="education">
     <h2>Education</h2>
-    <p><strong>MS in Business Analytics – University of Texas at Dallas</strong><br>2020 – 2022</p>
-    <p><strong>Bachelor of Technology – Computer Science</strong><br>2014 – 2018</p>
+  <div class="experience-entry">
+    <h3>Master of Science in Computer Engineering</h3>
+    <p class="experience-meta">University of North Texas &nbsp;|&nbsp; 2021 – 2023</p>
+  </div>
+  <div class="experience-entry">
+    <h3>Bachelor of Technology in Electronics and Communications Engineering</h3>
+    <p class="experience-meta">Gandhi Institute of Technology and Management &nbsp;|&nbsp; 2013 – 2017</p>
+  </div>
   </section>
 
   <section id="certifications">
