--- a/index.html
+++ b/index.html
@@ -217,29 +217,86 @@
 
   <script>
     tsParticles.load("tsparticles", {
-      background: { color: { value: "transparent" } },
-      fpsLimit: 60,
-      interactivity: { events: { resize: true } },
-      particles: {
-        color: { value: ["#00bcd4", "#f50057", "#03a9f4", "#ff9800"] },
-        move: {
-          direction: "none",
+      fullScreen: {
+      enable: true,
+      zIndex: -10
+    },
+    background: {
+      color: {
+        value: "transparent"
+      }
+    },
+    fpsLimit: 60,
+    interactivity: {
+      detectsOn: "canvas",
+      events: {
+        onHover: {
           enable: true,
-          outModes: { default: "bounce" },
-          random: true,
-          speed: 0.7,
-          straight: false
+          mode: "repulse"
         },
-        number: {
-          density: { enable: true, area: 800 },
-          value: 100
+        onClick: {
+          enable: true,
+          mode: "push"
         },
-        opacity: { value: 0.6 },
-        shape: { type: "circle" },
-        size: { value: { min: 1, max: 3 } }
+        resize: true
       },
-      detectRetina: true
-    });
+      modes: {
+        repulse: {
+          distance: 100,
+          duration: 0.4
+        },
+        push: {
+          quantity: 4
+        }
+      }
+    },
+    particles: {
+      color: {
+        value: ["#BB86FC", "#03A9F4", "#FF9800", "#F50057"]
+      },
+      links: {
+        enable: true,
+        color: "#ffffff",
+        distance: 120,
+        opacity: 0.2,
+        width: 1
+      },
+      move: {
+        enable: true,
+        speed: 1.6,
+        direction: "none",
+        outModes: {
+          default: "out"
+        },
+        straight: false,
+        trail: {
+          enable: false
+        },
+        parallax: {
+          enable: true,
+          force: 100,   // How much it moves with scroll/mouse
+          smooth: 15
+        }
+      },
+      number: {
+        density: {
+          enable: true,
+          area: 800
+        },
+        value: 100
+      },
+      opacity: {
+        value: 0.6
+      },
+      shape: {
+        type: ["circle", "triangle", "edge"]
+      },
+      size: {
+        value: { min: 1, max: 3 }
+      }
+    },
+    detectRetina: true
+  });
   </script>
 </body>
 </html>
