--- a/index.html
+++ b/index.html
@@ -216,8 +216,11 @@
   <a href="#home" id="back-to-top" title="Back to top">↑</a>
 
   <script>
-    tsParticles.load("tsparticles", {
-      fullScreen: {
+    let particlesInstance;
+
+  // Initial particle setup
+  tsParticles.load("tsparticles", {
+    fullScreen: {
       enable: true,
       zIndex: -10
     },
@@ -230,30 +233,17 @@
     interactivity: {
       detectsOn: "canvas",
       events: {
-        onHover: {
-          enable: true,
-          mode: "repulse"
-        },
-        onClick: {
-          enable: true,
-          mode: "push"
-        },
+        onHover: { enable: true, mode: "repulse" },
+        onClick: { enable: true, mode: "push" },
         resize: true
       },
       modes: {
-        repulse: {
-          distance: 100,
-          duration: 0.4
-        },
-        push: {
-          quantity: 4
-        }
+        repulse: { distance: 100, duration: 0.4 },
+        push: { quantity: 4 }
       }
     },
     particles: {
-      color: {
-        value: ["#BB86FC", "#03A9F4", "#FF9800", "#F50057"]
-      },
+      color: { value: ["#BB86FC", "#03A9F4", "#FF9800", "#F50057"] },
       links: {
         enable: true,
         color: "#ffffff",
@@ -263,39 +253,48 @@
       },
       move: {
         enable: true,
-        speed: 1.6,
+        speed: 0.5, // default base speed
         direction: "none",
-        outModes: {
-          default: "out"
-        },
-        straight: false,
-        trail: {
-          enable: false
-        },
-        parallax: {
-          enable: true,
-          force: 100,   // How much it moves with scroll/mouse
-          smooth: 15
-        }
+        outModes: { default: "out" },
+        parallax: { enable: true, force: 100, smooth: 10 }
       },
       number: {
-        density: {
-          enable: true,
-          area: 800
-        },
+        density: { enable: true, area: 800 },
         value: 100
       },
-      opacity: {
-        value: 0.6
-      },
-      shape: {
-        type: ["circle", "triangle", "edge"]
-      },
-      size: {
-        value: { min: 1, max: 3 }
-      }
+      opacity: { value: 0.6 },
+      shape: { type: ["circle", "triangle", "edge"] },
+      size: { value: { min: 1, max: 3 } }
     },
     detectRetina: true
+  }).then(instance => {
+    particlesInstance = instance;
+  });
+
+  // Scroll speed detection and dynamic particle speed adjustment
+  let lastScrollY = window.scrollY;
+  let lastTime = Date.now();
+
+  function updateParticleSpeed() {
+    const currentY = window.scrollY;
+    const currentTime = Date.now();
+    const deltaY = Math.abs(currentY - lastScrollY);
+    const deltaTime = (currentTime - lastTime) / 1000; // in seconds
+
+    const scrollSpeed = deltaY / deltaTime; // px/sec
+    const adjustedSpeed = Math.min(4, 0.5 + scrollSpeed / 300); // capped max
+
+    if (particlesInstance) {
+      particlesInstance.options.particles.move.speed = adjustedSpeed;
+      particlesInstance.refresh();
+    }
+
+    lastScrollY = currentY;
+    lastTime = currentTime;
+  }
+
+  window.addEventListener("scroll", () => {
+    updateParticleSpeed();
   });
   </script>
 </body>
